<resources>
    <string name="app_name">NewsX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="Home">Home</string>
    <string name="Science">Science</string>
    <string name="Sports">Sports</string>
    <string name="Health">Health</string>
    <string name="Enter">Entertainment</string>">
</resources>