<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/Home" />

    <item
        android:id="@+id/navigation_science"
        android:icon="@drawable/baseline_science_24"
        android:title="@string/Science" />

    <item
        android:id="@+id/navigation_sports"
        android:icon="@drawable/outline_accessibility_new_24"
        android:title="@string/Sports" />

    <item
        android:id="@+id/navigation_health"
        android:icon="@drawable/outline_add_shopping_cart_24"
        android:title="@string/Health" />

    <item
        android:id="@+id/navigation_entertainment"
        android:icon="@drawable/outline_books_movies_and_music_24"
        android:title="@string/Enter" />

</menu>
